--- a/paper/pldi2019.tex
+++ b/paper/pldi2019.tex
@@ -60,6 +60,9 @@
                         %% http://ctan.org/pkg/subcaption
 
 
+%% My packages
+\usepackage{xcolor}
+
 \begin{document}
 
 %% Title information
@@ -172,7 +175,7 @@ Text of abstract \ldots.
 %% environment and commands, and keywords command.
 \maketitle
 
-
+\input{macros.tex}
 \input{intro.tex}
 \input{background.tex}
 \input{example.tex}
