--- a/paper/pldi2019.bib
+++ b/paper/pldi2019.bib
@@ -15,3 +15,19 @@
  address = {New York, NY, USA},
  keywords = {assembly, bounded verification, data-driven verification, equivalence checking, native client, superoptimization, verification, x86-64},
 } 
+
+@inproceedings{TSVC,
+ author = {Maleki, Saeed and Gao, Yaoqing and Garzar\'{a}n, Maria J. and Wong, Tommy and Padua, David A.},
+ title = {An Evaluation of Vectorizing Compilers},
+ booktitle = {Proceedings of the 2011 International Conference on Parallel Architectures and Compilation Techniques},
+ series = {PACT '11},
+ year = {2011},
+ isbn = {978-0-7695-4566-0},
+ pages = {372--382},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1109/PACT.2011.68},
+ doi = {10.1109/PACT.2011.68},
+ acmid = {2121464},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
