--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -5,6 +5,7 @@
 \newcommand{\todo}[1]{{\color{red} \textbf{[#1]}}}
 \newcommand{\note}[1]{{\color{blue} \textbf{[#1]}}}
 
+\newcommand{\tool}{our tool}
 \newcommand{\nullsp}[1]{Null(#1)}
 \newcommand{\bisim}{bisimulation}
 \newcommand{\bisims}{bisimulations}
