--- a/paper/results.tex
+++ b/paper/results.tex
@@ -49,7 +49,7 @@ vectors of randomly-chosen bytes. This same set of test cases was
 sufficient to obtain code coverage over all these benchmarks. We
 also manually placed a bound on the input size to exclude overflow
 conditions and other undefined behavior; this is generally needed for
-proving equivalence\todo{cite sorav}.
+proving equivalence~\cite{Dahiya17HVC}.
 
 \todo{discuss use of ARM and flat memory model}
 
