--- a/paper/pldi2019.bib
+++ b/paper/pldi2019.bib
@@ -31,3 +31,79 @@
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
 } 
+@InProceedings{Dahiya17ASPLAS,
+  author="Dahiya, Manjeet and Bansal, Sorav",
+  title="Black-Box Equivalence Checking Across Compiler Optimizations",
+  booktitle="Asian Symposium on Programing Languages and Systems",
+  pages = { 127--147 },
+  year="2017",
+}
+@InProceedings{Dahiya17HVC,
+  author="Dahiya, Manjeet and Bansal, Sorav",
+  title="Modeling Undefined Behavior Semantics for Checking Equivalence Across Compiler Optimizations",
+  booktitle="Haifa Verification Conference",
+  year="2017"
+}
+
+%% Peephole optimization; handles undefined behavior well, but no loops.
+@inproceedings{Lopes2015,
+ author = {Lopes, Nuno P. and Menendez, David and Nagarakatte, Santosh and Regehr, John},
+ title = {Provably Correct Peephole Optimizations with Alive},
+ booktitle = {Proceedings of the 36th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI '15},
+ year = {2015},
+ pages = {22--32},
+} 
+
+%% not sure exactly what they can do with loops
+%% they essentially have rewrite rules on DAGs of expressions and try to unify them
+%% *BUT* they do have some rules that consider fixpoints, so they can do some stuff
+@inproceedings{Tristan2011,
+ author = {Tristan, Jean-Baptiste and Govereau, Paul and Morrisett, Greg},
+ title = {Evaluating Value-graph Translation Validation for LLVM},
+ booktitle = {Proceedings of the 32Nd ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI '11},
+ year = {2011},
+ pages = {295--305},
+} 
+
+%% Uses explicit template provided by a programmer that implies an alignment
+%% They handle challenging optimizations like loop interchange though
+@inproceedings{Kundu2009,
+ author = {Kundu, Sudipta and Tatlock, Zachary and Lerner, Sorin},
+ title = {Proving Optimizations Correct Using Parameterized Program Equivalence},
+ booktitle = {Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+ series = {PLDI '09},
+ year = {2009},
+ pages = {327--337},
+} 
+
+%% manually specify synchronization points
+@inproceedings{Kiefer2016,
+  title={Relational program reasoning using compiler IR},
+  author={Kiefer, Moritz and Klebanov, Vladimir and Ulbrich, Mattias},
+  booktitle={Working Conference on Verified Software: Theories, Tools, and Experiments},
+  pages={149--165},
+  year={2016},
+  organization={Springer}
+}
+
+%%
+@inproceedings{Sharma2013,
+ author = {Sharma, Rahul and Schkufza, Eric and Churchill, Berkeley and Aiken, Alex},
+ title = {Data-driven Equivalence Checking},
+ booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \&\#38; Applications},
+ series = {OOPSLA '13},
+ year = {2013},
+ pages = {391--406},
+} 
+
+%% translation validation
+@inproceedings{Necula2000,
+ author = {Necula, George C.},
+ title = {Translation Validation for an Optimizing Compiler},
+ booktitle = {Proceedings of the ACM SIGPLAN 2000 Conference on Programming Language Design and Implementation},
+ series = {PLDI '00},
+ year = {2000},
+ pages = {83--94},
+} 
