--- a/paper/pldi2019.tex
+++ b/paper/pldi2019.tex
@@ -177,6 +177,7 @@ Text of abstract \ldots.
 
 \input{macros.tex}
 \input{intro.tex}
+\input{related.tex}
 \input{background.tex}
 \input{example.tex}
 \input{algorithm.tex}
