--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -1,5 +1,4 @@
 
-\newcommand{\x86}{x86-64}
 \newcommand{\Z}[1]{\mathbb{Z}_{2^{#1}}}
 
 \newcommand{\todo}[1]{{\color{red} \textbf{[#1]}}}
@@ -17,3 +16,4 @@
 \newcommand{\cutpoint}{cutpoint}
 \newcommand{\cutpoints}{cutpoints}
 \newcommand{\controlflowmatrix}{M_{controlflow}}
+\newcommand{\controlflownullmatrix}{M_{controlflownull}}
